@@ -47,6 +47,9 @@ Release ...
   pointer is now left after the last line processed.
 * ln: The -f option is not ignored with the -s option for the POSIX version.
 * join: For the POSIX version, the list for the -o option must not be empty.
+* sort: With the -d option, digits were ignored erroneously.
+* sort: With '-k x,y', the second number refers to the last character of the
+  corresponding sort field.
 
 Release 050123
 * tr: The highest acceptable wide character for complementing strings is now
